# rust_dynamodb_local

./: .checkmake.ini  .gitignore  .mega-linter.yml  Cargo.toml  Makefile  README.md  cloudformation.yml  deny.toml  deploy.sh  docker-compose.yml  kill_web_service.sh  run.sh  run_test.sh
.github/workflows/: dependencies.yml  deploy.yml  linter.yml  rust.yml
docker/: build-docker-compose.yml  test-docker-compose.yml
docker/test/: docker-compose.yml
examples/: test.rs
src/: dynamodb.rs  handler.rs  main.rs
src/activitypub/: context.rs  mod.rs  object.rs
src/routes/: api.rs  mod.rs  nodeinfo.rs  users.rs
test-cases/: api_v1_statuses.json  nodeinfo_2.0.json  users_statuses.json
