[package]
name = "rust_lambda"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.53.0"
aws-sdk-dynamodb = "0.23.0"
lambda-web = { version = "0.2.1", features = ["rocket05"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_dynamo = { version = "4.0.11", features = ["aws-sdk-dynamodb+0_23"] }
serde_json = { version = "1.0.91", features = ["raw_value"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1.2.2", features = ["v4"] }
# TODO: use activitystreams = "0.6.2"

[dev-dependencies]
aws_lambda_events = "0.7.3"
reqwest = { version = "0.11.14", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1", features = ["macros"] }

